--- a/index.html
+++ b/index.html
@@ -395,6 +395,6 @@ We have eminent Directors, reputed and legendary names in the world of Cinema wh
       </div>
     </form>
     </body>
-<div class="small text-center text-muted fst-italic"><center>Copyright &copy; Rachana</center> </div>
+<div class="small text-center text-muted fst-italic"><center>Copyright &copy; BINGE DAY - Rachana</center> </div>
 </body>
 </html>
